<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.orioj.supacalculator.MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="361dp"
        android:layout_height="272dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/result"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/two"
            app:layout_constraintLeft_toRightOf="@+id/num1"
            app:layout_constraintTop_toBottomOf="@+id/num5" />

        <Button
            android:id="@+id/opPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/plus"
            app:layout_constraintLeft_toRightOf="@+id/num6"
            app:layout_constraintTop_toBottomOf="@+id/opMinus" />

        <Button
            android:id="@+id/num0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/zero"
            app:layout_constraintLeft_toRightOf="@+id/opPercent"
            app:layout_constraintTop_toBottomOf="@+id/num2" />

        <Button
            android:id="@+id/num5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/five"
            app:layout_constraintLeft_toRightOf="@+id/num4"
            app:layout_constraintTop_toBottomOf="@+id/num8" />

        <Button
            android:id="@+id/num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-29dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/num4" />

        <Button
            android:id="@+id/num6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-13dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/six"
            app:layout_constraintLeft_toRightOf="@+id/num5"
            app:layout_constraintTop_toBottomOf="@+id/num9" />

        <Button
            android:id="@+id/numDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/point"
            app:layout_constraintLeft_toRightOf="@+id/num0"
            app:layout_constraintTop_toBottomOf="@+id/num3" />

        <Button
            android:id="@+id/opPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/percent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/num1" />

        <Button
            android:id="@+id/eq"
            android:layout_width="88dp"
            android:layout_height="95dp"
            android:layout_marginLeft="-18dp"
            android:layout_marginTop="-1dp"
            android:onClick="clickHandle"
            android:text="@string/eq"
            app:layout_constraintLeft_toRightOf="@+id/num3"
            app:layout_constraintTop_toBottomOf="@+id/opPlus" />

        <Button
            android:id="@+id/num4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/four"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/num7" />

        <Button
            android:id="@+id/opMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/minus"
            app:layout_constraintLeft_toRightOf="@+id/num9"
            app:layout_constraintTop_toBottomOf="@+id/opMult" />

        <Button
            android:id="@+id/num3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/three"
            app:layout_constraintLeft_toRightOf="@+id/num2"
            app:layout_constraintTop_toBottomOf="@+id/num6" />

        <Button
            android:id="@+id/num9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/nine"
            app:layout_constraintLeft_toRightOf="@+id/num8"
            app:layout_constraintTop_toBottomOf="@+id/opDiv" />

        <Button
            android:id="@+id/num8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/eight"
            app:layout_constraintLeft_toRightOf="@+id/num7"
            app:layout_constraintTop_toBottomOf="@+id/backspace" />

        <Button
            android:id="@+id/num7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/seven"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear" />

        <Button
            android:id="@+id/opMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="-3dp"
            android:onClick="clickHandle"
            android:text="@string/mult"
            app:layout_constraintLeft_toRightOf="@+id/opDiv"
            app:layout_constraintTop_toTopOf="@+id/opDiv" />

        <Button
            android:id="@+id/opDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/divide"
            app:layout_constraintLeft_toRightOf="@+id/backspace"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

        <Button
            android:id="@+id/backspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:onClick="clickHandle"
            android:text="@string/backspace"
            app:layout_constraintLeft_toRightOf="@+id/clear"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

        <Button
            android:id="@+id/clear"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:elevation="0dp"
            android:onClick="clickHandle"
            android:text="@string/clear"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
